# dam-segmentation

./: .gitignore  Dockerfile  README.md  pyproject.toml  text.txt
dam_segmentation/: feature_extraction.py  settings.py  train_rf.py  utils.py
experiments/1-feature-subsets/: subsets_binary.py  subsets_multiclass.py
experiments/2-feature-ranking/: ranking_binary.py  ranking_multiclass.py
experiments/3-best-model/: ranking_binary.py  ranking_multiclass.py
experiments/binary-segmentation/1-feature-subsets/: subsets_binary.py
experiments/binary-segmentation/2-feature-ranking/: ranking_binary.py
experiments/binary-segmentation/3-best-model/: best_model.py
experiments/binary-segmentation/4-inference/: inference.py
experiments/binary-segmentation/4-test-iou/: test_iou.py
experiments/multiclass-segmentation/1-feature-subsets/: subsets_multiclass.py
experiments/multiclass-segmentation/2-feature-ranking/: ranking_multiclass.py
experiments/multiclass-segmentation/3-best-model/: best_model.py
experiments/multiclass-segmentation/4-inference/: inference.py
experiments/multiclass-segmentation/4-test-iou/: test_iou.py
experiments/random_forests/1-subsets/: results.csv  subsets_binary.py  subsets_multiclass.py  subsets_results_binary.csv  subsets_results_multiclass.csv  subsets_rf.py
experiments/random_forests/2-feature-ranking/: feature_importances.csv  feature_importances_binary.csv  feature_importances_multiclass.csv  ranking_binary.py  (+3 more)
scripts/: convert_multi2bin.py  create_dataset.py  create_tabular_dataset.py  data_correlation.py  downsample_dataset.py  downsample_single_label.py
scripts/dataset/: create_sample_data.py
scripts/experiments/: train_rf.py
(+9 files in other folders)
