[tool.poetry]
name = "dam-segmentation"
version = "1.0.0"
description = "Models for land-cover segmentation in Eaerial Embankment Dam multispectral images."
authors = ["Andre Mattos <carlosandrematte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
scipy = "^1.14.1"
scikit-image = "^0.24.0"
matplotlib = "^3.9.2"
tifffile = "^2024.8.24"
fastparquet = "^2024.5.0"
seaborn = "^0.13.2"
joblib = "^1.4.2"
ms-image-tool = "^1.0.1"
datasets = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
isort = "^5.13.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
